[plclogo] Java 17/21 features
Signed-off-by: Alexander Falkenstern <alexander.falkenstern@gmail.com>