@@ -46,7 +46,7 @@ public class PLCLogoBindingConstants {
     public static final String OBSERVE_CHANNEL = "observed";
     public static final String VALUE_CHANNEL = "value";
     public static final String RTC_CHANNEL = "rtc";
-    public static final String DAIGNOSTICS_CHANNEL = "diagnostic";
+    public static final String DIAGNOSTIC_CHANNEL = "diagnostic";
     public static final String DAY_OF_WEEK_CHANNEL = "weekday";
 
     // List of all channel properties
@@ -103,80 +103,62 @@ public class PLCLogoBindingConstants {
         LOGO_STATES_0BA8 = Collections.unmodifiableMap(buffer);
     }
 
-    public static final Map<String, Map<Integer, String>> LOGO_STATES;
-    static {
-        Map<String, Map<Integer, String>> buffer = new HashMap<>();
-        buffer.put(LOGO_0BA7, LOGO_STATES_0BA7);
-        buffer.put(LOGO_0BA8, LOGO_STATES_0BA8);
-        LOGO_STATES = Collections.unmodifiableMap(buffer);
-    }
+    public static final Map<String, Map<Integer, String>> LOGO_STATES = Map.ofEntries(
+            Map.entry(LOGO_0BA7, LOGO_STATES_0BA7), // Possible diagnostic states for LOGO! 7
+            Map.entry(LOGO_0BA8, LOGO_STATES_0BA8) // Possible diagnostic states for LOGO! 8
+    );
 
     public record Layout(int address, int length) {
     }
 
-    public static final Map<String, Layout> LOGO_CHANNELS;
-    static {
-        Map<String, Layout> buffer = new HashMap<>();
-        buffer.put(DAIGNOSTICS_CHANNEL, new Layout(984, 1)); // Diagnostics starts at 984 for 1 byte
-        buffer.put(RTC_CHANNEL, new Layout(985, 6)); // RTC starts at 985 for 6 bytes: year month day hour minute second
-        buffer.put(DAY_OF_WEEK_CHANNEL, new Layout(998, 1)); // Diagnostics starts at 998 for 1 byte
-        LOGO_CHANNELS = Collections.unmodifiableMap(buffer);
-    }
+    public static final Map<String, Layout> LOGO_CHANNELS = Map.ofEntries(
+            Map.entry(DIAGNOSTIC_CHANNEL, new Layout(984, 1)), // Diagnostic starts at 984 for 1 byte
+            // RTC starts at 985 for 6 bytes: year month day hour minute second
+            Map.entry(RTC_CHANNEL, new Layout(985, 6)), // "Keep the line break" comment
+            Map.entry(DAY_OF_WEEK_CHANNEL, new Layout(998, 1)) // Day of week starts at 998 for 1 byte
+    );
 
-    public static final Map<Integer, String> DAY_OF_WEEK;
-    static {
-        Map<Integer, String> buffer = new HashMap<>();
-        buffer.put(1, "SUNDAY");
-        buffer.put(2, "MONDAY");
-        buffer.put(3, "TUEsDAY");
-        buffer.put(4, "WEDNESDAY");
-        buffer.put(5, "THURSDAY");
-        buffer.put(6, "FRIDAY");
-        buffer.put(7, "SATURDAY");
-        DAY_OF_WEEK = Collections.unmodifiableMap(buffer);
-    }
+    public static final Map<Integer, String> DAY_OF_WEEK = Map.ofEntries(
+            // LOGO! start the week on sunday coded as decimal number one
+            Map.entry(1, "SUNDAY"), Map.entry(2, "MONDAY"), // "Keep the line break" comment
+            Map.entry(3, "TUESDAY"), Map.entry(4, "WEDNESDAY"), // "Keep the line break" comment
+            Map.entry(5, "THURSDAY"), Map.entry(6, "FRIDAY"), // "Keep the line break" comment
+            Map.entry(7, "SATURDAY") // LOGO! ends the week on saturday
+    );
 
-    private static final Map<String, Layout> LOGO_MEMORY_0BA7;
-    static {
-        Map<String, Layout> buffer = new HashMap<>();
-        buffer.put(MEMORY_BYTE, new Layout(0, 850));
-        buffer.put(MEMORY_DWORD, new Layout(0, 850));
-        buffer.put(MEMORY_WORD, new Layout(0, 850));
-        buffer.put(I_DIGITAL, new Layout(923, 3)); // Digital inputs starts at 923 for 3 bytes
-        buffer.put(Q_DIGITAL, new Layout(942, 2)); // Digital outputs starts at 942 for 2 bytes
-        buffer.put(M_DIGITAL, new Layout(948, 4)); // Digital markers starts at 948 for 4 bytes
-        buffer.put(I_ANALOG, new Layout(926, 16)); // Analog inputs starts at 926 for 16 bytes -> 8 words
-        buffer.put(Q_ANALOG, new Layout(944, 4)); // Analog outputs starts at 944 for 4 bytes -> 2 words
-        buffer.put(M_ANALOG, new Layout(952, 32)); // Analog markers starts at 952 for 32 bytes -> 16 words
-        buffer.put(MEMORY_SIZE, new Layout(0, 984)); // Size of memory block for LOGO! 7
-        LOGO_MEMORY_0BA7 = Collections.unmodifiableMap(buffer);
-    }
+    private static final Map<String, Layout> LOGO_MEMORY_0BA7 = Map.ofEntries(
+            Map.entry(MEMORY_BYTE, new Layout(0, 850)), // Virtual Memory starts at 0 for 850 bytes
+            Map.entry(MEMORY_DWORD, new Layout(0, 850)), // Virtual Memory starts at 0 for 850 bytes -> 212 dwords
+            Map.entry(MEMORY_WORD, new Layout(0, 850)), // Virtual Memory starts at 0 for 850 bytes -> 425 words
+            Map.entry(I_DIGITAL, new Layout(923, 3)), // Digital inputs starts at 923 for 3 bytes
+            Map.entry(Q_DIGITAL, new Layout(942, 2)), // Digital outputs starts at 942 for 2 bytes
+            Map.entry(M_DIGITAL, new Layout(948, 4)), // Digital markers starts at 948 for 4 bytes
+            Map.entry(I_ANALOG, new Layout(926, 16)), // Analog inputs starts at 926 for 16 bytes -> 8 words
+            Map.entry(Q_ANALOG, new Layout(944, 4)), // Analog outputs starts at 944 for 4 bytes -> 2 words
+            Map.entry(M_ANALOG, new Layout(952, 32)), // Analog markers starts at 952 for 32 bytes -> 16 words
+            Map.entry(MEMORY_SIZE, new Layout(0, 984))// Size of memory block for LOGO! 7 in bytes
+    );
 
-    private static final Map<String, Layout> LOGO_MEMORY_0BA8;
-    static {
-        Map<String, Layout> buffer = new HashMap<>();
-        buffer.put(MEMORY_BYTE, new Layout(0, 850));
-        buffer.put(MEMORY_DWORD, new Layout(0, 850));
-        buffer.put(MEMORY_WORD, new Layout(0, 850));
-        buffer.put(I_DIGITAL, new Layout(1024, 8)); // Digital inputs starts at 1024 for 8 bytes
-        buffer.put(Q_DIGITAL, new Layout(1064, 8)); // Digital outputs starts at 1064 for 8 bytes
-        buffer.put(M_DIGITAL, new Layout(1104, 14)); // Digital markers starts at 1104 for 14 bytes
-        buffer.put(I_ANALOG, new Layout(1032, 32)); // Analog inputs starts at 1032 for 32 bytes -> 16 words
-        buffer.put(Q_ANALOG, new Layout(1072, 32)); // Analog outputs starts at 1072 for 32 bytes -> 16 words
-        buffer.put(M_ANALOG, new Layout(1118, 128)); // Analog markers starts at 1118 for 128 bytes -> 64 words
-        buffer.put(NI_DIGITAL, new Layout(1246, 16)); // Network inputs starts at 1246 for 16 bytes
-        buffer.put(NI_ANALOG, new Layout(1262, 128)); // Network analog inputs starts at 1262 for 128 bytes -> 64 words
-        buffer.put(NQ_DIGITAL, new Layout(1390, 16)); // Network outputs starts at 1390 for 16 bytes
-        buffer.put(NQ_ANALOG, new Layout(1406, 64)); // Network analog inputs starts at 1406 for 64 bytes -> 32 words
-        buffer.put(MEMORY_SIZE, new Layout(0, 1470)); // Size of memory block for LOGO! 8
-        LOGO_MEMORY_0BA8 = Collections.unmodifiableMap(buffer);
-    }
+    private static final Map<String, Layout> LOGO_MEMORY_0BA8 = Map.ofEntries(
+            Map.entry(MEMORY_BYTE, new Layout(0, 850)), // Virtual Memory starts at 0 for 850 bytes
+            Map.entry(MEMORY_DWORD, new Layout(0, 850)), // Virtual Memory starts at 0 for 850 bytes -> 212 dwords
+            Map.entry(MEMORY_WORD, new Layout(0, 850)), // Virtual Memory starts at 0 for 850 bytes -> 425 words
+            Map.entry(I_DIGITAL, new Layout(1024, 8)), // Digital inputs starts at 1024 for 8 bytes
+            Map.entry(Q_DIGITAL, new Layout(1064, 8)), // Digital outputs starts at 1064 for 8 bytes
+            Map.entry(M_DIGITAL, new Layout(1104, 14)), // Digital markers starts at 1104 for 14 bytes
+            Map.entry(I_ANALOG, new Layout(1032, 32)), // Analog inputs starts at 1032 for 32 bytes -> 16 words
+            Map.entry(Q_ANALOG, new Layout(1072, 32)), // Analog outputs starts at 1072 for 32 bytes -> 16 words
+            Map.entry(M_ANALOG, new Layout(1118, 128)), // Analog markers starts at 1118 for 128 bytes -> 64 words
+            Map.entry(NI_DIGITAL, new Layout(1246, 16)), // Network inputs starts at 1246 for 16 bytes
+            Map.entry(NI_ANALOG, new Layout(1262, 128)), // Network analog inputs starts at 1262 for 128 bytes -> 64
+                                                         // words
+            Map.entry(NQ_DIGITAL, new Layout(1390, 16)), // Network outputs starts at 1390 for 16 bytes
+            Map.entry(NQ_ANALOG, new Layout(1406, 64)), // Network analog inputs starts at 1406 for 64 bytes -> 32 words
+            Map.entry(MEMORY_SIZE, new Layout(0, 1470)) // Size of memory block for LOGO! 8 in bytes
+    );
 
-    public static final Map<String, Map<String, Layout>> LOGO_MEMORY_BLOCK;
-    static {
-        Map<String, Map<String, Layout>> buffer = new HashMap<>();
-        buffer.put(LOGO_0BA7, LOGO_MEMORY_0BA7);
-        buffer.put(LOGO_0BA8, LOGO_MEMORY_0BA8);
-        LOGO_MEMORY_BLOCK = Collections.unmodifiableMap(buffer);
-    }
+    public static final Map<String, Map<String, Layout>> LOGO_MEMORY_BLOCK = Map.ofEntries(
+            Map.entry(LOGO_0BA7, LOGO_MEMORY_0BA7), // Possible blocks for LOGO! 7
+            Map.entry(LOGO_0BA8, LOGO_MEMORY_0BA8) // Possible blocks for LOGO! 8
+    );
 }
